# nunavut

./: .gitignore  LICENSE  nunavut.cabal
src/: Nunavut.hs
src/Nunavut/: Activator.hs  ErrorFunction.hs  Filter.hs  Layer.hs  NeuralNet.hs  Newtypes.hs  Propogation.hs  Signals.hs  Util.hs
src/Nunavut/Activator/: Internal.hs
src/Nunavut/Filter/: Internal.hs
src/Nunavut/Layer/: Internal.hs  Weights.hs
src/Nunavut/NeuralNet/: Internal.hs
src/Nunavut/Newtypes/: Internal.hs
src/Nunavut/Util/: Dimensions.hs  Error.hs  NonEmpty.hs
test/Nunavut/: ActivatorSpec.hs  FilterSpec.hs  LayerSpec.hs  NeuralNetSpec.hs  NewtypesSpec.hs  PropogationSpec.hs
test/Nunavut/Layer/: WeightsSpec.hs
test/Nunavut/Newtypes/: Laws.hs
test/Nunavut/Util/: Arbitrary.hs  TestUtils.hs
