name:                Nunavut
version:             0.1.0.0
stability:           alpha
synopsis:            Yet Another Haskell Neural Network Library

author:              Mark Whitfield
maintainer:          markcwhitfield@gmail.com

homepage:            github.com/markcwhitfield/nunavut
bug-reports:         github.com/markcwhitfield/nunavut  

license:             MIT
license-file:        LICENSE
copyright:           Mark Whitfield

category:            Machine Learning
build-type:          Simple
data-files:          README

cabal-version:       >=1.10

-- description:         


source-repository head
  type:                git
  location:            git://www.github.com/markcwhitfield/nunavut.git


library
  exposed-modules:     Nunavut
  other-modules:       Nunavut.Layer,
                       Nunavut.Layer.Internal,
                       Nunavut.Layer.Weights,
                       Nunavut.Activator,
                       Nunavut.Activator.Internal,
                       Nunavut.Newtypes,
                       Nunavut.Newtypes.Internal,
                       Nunavut.NeuralNet,
                       Nunavut.NeuralNet.Internal,
                       Nunavut.Propogation
                       Nunavut.Util,
                       Nunavut.Util.NonEmpty,
                       Nunavut.Util.Error,
                       Nunavut.Util.Dimensions

  hs-source-dirs:
    src
  build-depends:
    containers    >= 0.5,
    text          >= 1.1,
    lens          >= 4.2,
    hmatrix       >= 0.16,
    either        >= 4.3,
    mtl           >= 2.2,
    transformers  >= 0.4,
    semigroups    >= 0.15,
    split         >= 0.2,
    random        >= 1.0,
    base          == 4.7.*

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    TemplateHaskell,
                       MultiParamTypeClasses,
                       FlexibleInstances
                      
  ghc-options:         -Wall

  
test-suite nunavut-tests
  type:     exitcode-stdio-1.0
  main-is:  Main.hs

  hs-source-dirs:
    src, test
  build-depends:
    QuickCheck    >= 2.7,
    hspec         >= 1.9,
    text          >= 1.1,
    semigroups    >= 0.15,
    hmatrix       >= 0.16,
    containers    >= 0.5,
    lens          >= 4.2,
    either        >= 4.3,
    mtl           >= 2.2,
    transformers  >= 0.4,
    split         >= 0.2,
    random        >= 1.0,
    base          == 4.7.*

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
  other-extensions:    FlexibleInstances
  ghc-options:         -Wall
